impv: update api route convention
